# trackbox-metadata

./: .gitignore  CMakeLists.txt  README.md  main.cpp  version.h.in
lib/taglib/: ConfigureChecks.cmake
lib/taglib/taglib/: CMakeLists.txt
